2002-06-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.cyg config/makefile.mgw config/makefile.os2:
 	Minor changes relative to the new gd driver.

2002-06-08  Johannes Zellner  <johannes@zellner.org>

	* term/svg.trm: changes to make it compile w/o PM3D defined
	* term/gif.trm: move boxfill out of the PM3D definition, so that
	it is also available if PM3D is not defined.

2002-06-08  Johannes Zellner  <johannes@zellner.org>

	* term/fig.trm term/svg.trm: added ifdefs for USE_ULIG_FILLEDBOXES
	* term/gd.trm: use gdImagePtr /after/ gd.h is included
	* src/gplt_x11.c: removed unused functions

2002-06-07  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/metapost.trm: In the documentation section, fixed `latex' to
	`latex` --- the reason for doc2rtf to crash.

2002-06-06  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* term/metapost.trm: Add pm3d capability, patch by Arun Persaud
	<apersaud@lbl.gov>.

2002-06-05  Johannes Zellner  <johannes@zellner.org>

	* src/pm3d.c: yet again improved scansautomatic

2002-06-05  Johannes Zellner  <johannes@zellner.org>

	* term/gd.trm:
	- macro Y(y)
	- PNG_point plus related functions, implementing the pointtypes
	  as in post / X11 ...

2002-06-05  Johannes Zellner  <johannes@zellner.org>

	* term/gd.trm: filledboxes

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* term/svg.trm: removed SVG_StyleStrokeColor() which was unused

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* term/pdf.trm: changes for 'linetype palette'

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* term/pdf.trm: 'filledboxes pattern' for the pdf driver.

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* term/pdf.trm: 'filledboxes solid' for the pdf driver

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* term/svg.trm: use USE_ULIG_FILLEDBOXES to allow building w/o
	filledboxes support.

2002-06-04  Johannes Zellner  <johannes@zellner.org>

	* src/readline.c: install a SIGWINCH handler to solve BUG 533101